v95
    -jpeg model: 
         -more context in Map1  (20)
         -more inputs from main context
         -2 main mixer inputs + 1 apm
         -cleanup
v94
    -change jpeg model
    -fix/change detection (tiff,text)
v93
    -change jpeg model
v92
    - small fixes
    - small adjustments
    - detect pdf CMYK and force as IMAGE32
v91
    - fix jpeg compression on larger levels
    - fix SZDD recompression (fail if error)
v90
    - Add DEC Alpha model/detect from paq8px193fix2
    - Small changes in mixer, statemap, apm, indirectmap, contextmap2
    - Change matchmodel, recordmodel, jpegmodel
    - Fix jpegmodel on thumnail images (or full image fails to compress)
    - Adjust predictors
v89
    - fix subsamp reset on every new jpeg 
v88
    - a bit faster jpeg compression
    - add +1 context to jpeg and change some :)
v87
    -fix decompression command line (only archive name needed again)
    -limit mem on some models
    -small changes
v86
    - change jpeg
    - -w option - +9 html entities
                - reorder: albums, clubs, disorders
                - List type articles moved to ':' section
    - wrt most upper chars converted to lower, if -w also process combined words
    - wordmodel some changes
v85
    - fix rounding error
v84
    - adjust jpeg,im1 predictor
    - add mod_SSE to all predictors exept jpeg
    - add external dictionary command line option
    - add RC to encoder (paq8pxd82sa)
    - change ppmd mem
    - in wordmodel process math tag (wiki)
v83
    - add mod_SSE to text stream predictor
    - -w option - reorder content by title beginning with number larger then 9
                - add &" to "  
v82 
    - -w option - reorder content by title selecting ',' or ':'
v81
    - fix str number detection &#xxxx;
    - wit -> more escapes for lang

v80
    - Small changes in wordModel
    - Add second option -w for direct input of wikipedia dumps
    - WIT data type (option -w) for wikipedia 